# clang-format-all

./: Makefile  README.md  check-all.py  clang-format-all  clang-format-all.sh  pyproject.toml
src/clang-format-all/: clang-format-all.py
